Changed visit details
